Bug 23609 - XIEvent seems to have uninitialized send_event parameter
Summary: XIEvent seems to have uninitialized send_event parameter
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xi (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-31 11:12 UTC by Carlos Garnacho Parro
Modified: 2009-08-31 23:46 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Carlos Garnacho Parro 2009-08-31 11:12:56 UTC
I had code like this spewing warnings about conditionals based in uninitialized variables in valgrind:

XIEvent *ev;

/* Get event through XGetEventData */

ev = (XIEvent *) cookie->data;

/* Here */
if (ev->send_event)
  {
    ...
  }

I'm not sure if XIEvents are supposed to be sent through XSendEvent() anymore, but it should be probably initialized to false anyway
Comment 1 Peter Hutterer 2009-08-31 23:46:22 UTC
Fix pushed as 693d9a43. Thanks for the report!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.