Initialize send_event for cookie events. (#23609)

X.Org Bug 23609 <http://bugs.freedesktop.org/show_bug.cgi?id=23609>